# ragit

./: .gitignore  Cargo.toml  Dependencies.md  README.md  ROADMAP.md  TODO.md  force_archive.diff  models.json  test_models_init.py  update_config.diff
RelNotes/: 0.2.1.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md  0.4.0.md  0.4.1.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md
crates/api/: Cargo.toml  README.md  models.json
crates/api/src/: api_key.rs  api_provider.rs  audit.rs  error.rs  json_type.rs  lib.rs  main.rs  message.rs  model.rs  record.rs  request.rs  response.rs  tests.rs  utils.rs
crates/api/src/chat/: message.rs  mod.rs  model_kind.rs  request.rs  response.rs
crates/api/src/chat/message/: media.rs
crates/api/src/chat/response/: anthropic.rs  cohere.rs  deepseek.rs  groq.rs  ollama.rs  openai.rs
crates/api/src/image/: mod.rs  model_kind.rs  request.rs  response.rs
crates/api/src/response/: anthropic.rs  cohere.rs  google.rs  openai.rs
crates/fs/: Cargo.toml  README.md
crates/fs/src/: lib.rs  log.rs
crates/ignore/: Cargo.toml
crates/ignore/src/: lib.rs  tests.rs
crates/pdl/: Cargo.toml  README.md
crates/pdl/src/: error.rs  image.rs  lib.rs  message.rs  role.rs  schema.rs  util.rs
crates/pdl/src/error/: json_type.rs
crates/pdl/src/schema/: code_fence.rs  parse.rs  parse_value.rs  task_list.rs  tests.rs
crates/server/: Cargo.toml  README.md  analyze-log.py  ragit-server-logs
crates/server/docs/: endpoints.md  host.md  openapi.yaml
crates/server/migrations/: 20250404062206_init_tables.sql  20250626080705_add_unique_constraint_to_ai_model_name.sql
crates/server/src/: cli.rs  config.rs  error.rs  lib.rs  macros.rs  main.rs  methods.rs  models.rs  utils.rs
crates/server/src/methods/: admin.rs  auth.rs  chat.rs  chunk.rs  clone.rs  get.rs  health.rs  image.rs  index.rs  post.rs  push.rs  repo.rs  repo_fs.rs  search.rs  user.rs
crates/server/src/models/: ai_model.rs  archive.rs  auth.rs  blob.rs  chat.rs  chunk.rs  file.rs  push.rs  repo.rs  user.rs
docs/: build.md  chunks.md  commands.md  config.md  config_doc.py  contribution.md  eval.md  index.md  intro.txt  models.md  multi_turn.md  pdl_format.md  pipeline.md  prompt_engineering.md  publish.md  quick_guide.md  sync_with_git.md  uid_query.md
prompts/: agent.pdl  answer_query.pdl  describe_image.pdl  extract_keyword.pdl  multi_turn.pdl  raw.pdl  rerank_summary.pdl  rerank_title.pdl  summarize.pdl  summarize_chunks.pdl  summarize_knowledge_base.pdl
ragithub/backend/: .gitignore  Cargo.toml  models.json
ragithub/backend/src/: error.rs  lib.rs  macros.rs  main.rs  methods.rs  models.rs  utils.rs
ragithub/backend/src/methods/: ai_model.rs  chat.rs  chunk.rs  image.rs  push.rs  repo_fs.rs  search.rs
ragithub/backend/src/models/: ai_model.rs  archive.rs  auth.rs  blob.rs  chat.rs  chunk.rs  repo.rs
ragithub/frontend/: .gitignore  Cargo.toml  notice.md
ragithub/frontend/blog/: 2025-06-08.md  2025-06-27.md  manage.py  ragit-0.2.1-release.md  ragit-0.3.0-release.md  ragit-0.3.1-release.md  ragit-0.3.2-release.md  ragit-0.3.3-release.md  ragit-0.3.4-release.md  ragit-0.3.5-release.md  ragit-0.4.0-release.md  ragit-0.4.1-release.md  ragit-0.4.2-release.md  ragit-0.4.3-release.md  ragit-0.4.4-release.md
ragithub/frontend/components/: image-modal-box.html  nav.html
ragithub/frontend/scripts/: clone-button.js  image-modal-box.js  tooltip.js  top-menu.js
ragithub/frontend/src/: colors.rs  error.rs  init.rs  main.rs  methods.rs  models.rs  utils.rs
ragithub/frontend/src/methods/: ai_model.rs  blog.rs  chunk.rs  ci.rs  file.rs  health.rs  image.rs  index.rs  proxy.rs  repo.rs
ragithub/frontend/src/models/: ai_model.rs  blog.rs  chunk.rs  ci.rs  file.rs  image.rs  menu.rs  repo.rs  sort.rs  tag.rs
ragithub/frontend/styles/: ai-model-index.scss  ci-page.scss.tera  colors.scss.tera  content.scss  image-modal-box.scss  markdown.scss.tera  nav.scss  popup.scss  repo-detail.scss  repo-index.scss  sidebar.scss  style.scss  tooltip.scss  top-menu.scss  units.scss
ragithub/frontend/templates/: ai-model-index.html  base.html  blog-article.html  blog-index.html  ci-detail.html  ci-index.html  content.html  error.html  image-content.html  index.html  repo-detail.html  repo-index.html  svgs.html
ragithub/frontend/test-results/: manage.py  result-027a29d16-mac.json  result-04ee6286f-mac.json  result-0526d3e20-linux.json  result-0526d3e20-windows.json  result-0550e1646-linux.json  result-0bfcdc3e5-linux.json  result-0d837ef41-linux.json  result-119cb72f0-mac.json  result-11bcd4263-linux.json  result-16a6c7ac3-linux.json  result-1ad288e5e-mac.json  result-239d2df2c-linux.json  result-29a3bf1cb-linux.json  result-2f93225e4-mac.json  result-319b5e4fe-mac.json  result-376ca3ee4-linux.json  result-3aa665352-linux.json  result-3c6b6ebe1-linux.json  result-3e136fdeb-mac.json  result-3e76f8b4f-linux.json  result-45d75cf09-linux.json  result-470ab07da-linux.json  result-499147737-linux.json  result-4c3b9e864-linux.json  result-51578f8d5-mac.json  result-5387e6dec-mac.json  result-56f0686db-linux.json  result-585c4f8ba-linux.json  result-5b3ae7fd7-linux.json  result-5ba0a12a6-mac.json  result-5d15f3ade-linux.json  result-5d6414fd8-linux.json  result-632949da6-linux.json  result-6ae9fcff5-linux.json  result-6b1add466-linux.json  result-774e5c41d-linux.json  result-7811aeb05-linux.json  result-7912db142-linux.json  result-7cebb43a6-linux.json  (+49 more)
scripts/: config_doc.py  load_sample.py  tests.py
src/: agent.rs  api_config.rs  chunk.rs  cli.rs  constant.rs  error.rs  external.rs  index.rs  lib.rs  main.rs  prompts.rs  query.rs  schema.rs  summary.rs  tree.rs  uid.rs
tests/: README.md  abbrev.py  add_and_rm.py  add_and_rm2.py  archive.py  audit.py  auto_migrate.py  auto_recover.py  cannot_read_images.py  cargo_features.py  cargo_tests.py  cat_file.py  clean_all.py  clean_up_erroneous_chunk.py  cli.py  clone.py  clone2.py  clone_empty.py  config.py  config_doc.py  csv_reader.py  dump_models_dot_json.py  empty.py  end_to_end.py  erroneous_llm.py  external_bases.py  extract_keywords.py  (+64 more)
(+129 files in other folders)
