[package]
name = "ragit"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "git-like rag pipeline"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.39"
clearscreen = "4.0.1"
csv = "1.3.1"
flate2 = "1.0.35"
image = "0.25.5"
json = "0.12.4"
lazy_static = "1.5.0"
ragit-api = { path = "./crates/api", version = "0.3.0" }
ragit-cli = { path = "./crates/cli", version = "0.3.0" }
ragit-fs = { path = "./crates/fs", version = "0.3.0" }
ragit-ignore = { path = "./crates/ignore", version = "0.3.0" }
ragit-korean = { path = "./crates/korean", version = "0.3.0" }
ragit-pdl = { path = "./crates/pdl", version = "0.3.0" }
regex = "1.11.1"
reqwest = "0.12.12"
rust-stemmers = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
