[package]
name = "ragit"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "git-like rag pipeline"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.40"
clearscreen = "4.0.1"
csv = "1.3.1"
flate2 = "1.1.0"
image = "0.25.5"
lazy_static = "1.5.0"
ragit-api = { path = "./crates/api", version = "0.3.5" }
ragit-cli = { path = "./crates/cli", version = "0.3.5" }
ragit-fs = { path = "./crates/fs", version = "0.3.5" }
ragit-ignore = { path = "./crates/ignore", version = "0.3.5" }
ragit-korean = { path = "./crates/korean", version = "0.3.5" }
ragit-pdl = { path = "./crates/pdl", version = "0.3.5" }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["multipart"] }
rust-stemmers = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
