[package]
name = "ragit"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "git-like rag pipeline"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.41"
csv = { version = "1.3.1", optional = true }
flate2 = "1.1.2"
image = "0.25.6"
lazy_static = "1.5.0"
mupdf = { version = "0.5.0", optional = true }
png = { version = "0.17.16", optional = true }  # `resvg`'s function returns `png::EncodingError`
ragit-api = { path = "./crates/api", version = "0.4.3" }
ragit-cli = { path = "./crates/cli", version = "0.4.3" }
ragit-fs = { path = "./crates/fs", version = "0.4.3", features = ["diff"] }
ragit-ignore = { path = "./crates/ignore", version = "0.4.3" }
ragit-korean = { path = "./crates/korean", version = "0.4.3", optional = true }
ragit-pdl = { path = "./crates/pdl", version = "0.4.3" }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["multipart"] }
resvg = { version = "0.45.1", optional = true }
rust-stemmers = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"

[features]
# `csv` is small enough and is purely in Rust.
default = ["csv"]
full = ["csv", "pdf", "svg", "korean"]

csv = ["dep:csv"]
korean = ["dep:ragit-korean"]
pdf = ["dep:mupdf"]
svg = ["dep:resvg", "dep:png"]

# This feature only affects `rag version --build-options`.
# Please make sure to enable this when you build ragit with "production" profile.
production = []

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"

# mupdf does not compile without this patch on MacOS
[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git" }
