[package]
name = "ragit-api"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "api utilities for ragit"

[dependencies]
async-std = "1.13.0"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
image = "0.25.5"
json = "0.12.4"
ragit-fs = { path = "../fs", version = "0.2.1" }
ragit-pdl = { path = "../pdl", version = "0.2.1" }
rand = "0.8.5"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
