[package]
name = "ragit-api"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "api utilities for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-api"

[dependencies]
async-std = "1.13.0"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
image = "0.25.5"
ragit-fs = { path = "../fs", version = "0.4.0" }
ragit-pdl = { path = "../pdl", version = "0.4.0" }
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
