[package]
name = "ragit-api"
version = "0.4.4"
edition = "2024"
license = "MIT"
description = "api utilities for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-api"

[dependencies]
async-std = "1.13.2"
base64 = "0.22.1"
chrono = "0.4.41"
futures = "0.3.31"
image = "0.25.6"
lazy_static = "1.5.0"
ragit-fs = { path = "../fs", version = "0.4.4", features = ["log"] }
ragit-pdl = { path = "../pdl", version = "0.4.4" }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
