[package]
name = "ragit-fs"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "fs utilities for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-fs"

[dependencies]
chrono = { version = "0.4.40", optional = true }
pathdiff = { version = "0.2.3", optional = true }
rand = "0.9.0"

[features]
default = []
log = ["dep:chrono"]
diff = ["dep:pathdiff"]
