[package]
name = "ragit-fs"
version = "0.4.6"
edition = "2024"
license = "MIT"
description = "fs utilities for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-fs"

[dependencies]
chrono = { version = "0.4.41", optional = true }
pathdiff = { version = "0.2.3", optional = true }
rand = "0.9.2"

[features]
default = []
log = ["dep:chrono"]
diff = ["dep:pathdiff"]
