[package]
name = "ragit-ignore"
version = "0.4.4"
edition = "2024"
license = "MIT"
description = "ignore-parser for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-ignore"

[dependencies]
regex = "1.11.2"
ragit-fs = { path = "../fs", version = "0.4.4", features = ["diff"] }
