[package]
name = "ragit-pdl"
version = "0.4.2"
edition = "2024"
license = "MIT"
description = "pdl parser for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-pdl"

[dependencies]
base64 = "0.22.1"
image = "0.25.5"
lazy_static = "1.5.0"
ragit-fs = { path = "../fs", version = "0.4.2" }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tera = "1.20.0"
