[package]
name = "ragit-pdl"
version = "0.4.3"
edition = "2024"
license = "MIT"
description = "pdl parser for ragit"
repository = "https://github.com/baehyunsol/ragit"
documentation = "https://docs.rs/ragit-pdl"

[dependencies]
base64 = "0.22.1"
image = "0.25.6"
lazy_static = "1.5.0"
ragit-fs = { path = "../fs", version = "0.4.3" }
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tera = "1.20.0"
