[package]
name = "ragit-server"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "poc server implementation of ragit"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.0"
chrono = "0.4.39"
futures-util = "0.3.31"
ragit = { path = "../..", version = "0.3.1" }
ragit-fs = { path = "../fs", version = "0.3.1" }
rand = "0.9.0"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
