[package]
name = "ragit-server"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "poc server implementation of ragit"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.0"
chrono = "0.4.40"
futures-util = "0.3.31"
ragit = { path = "../..", version = "0.3.5" }
ragit-fs = { path = "../fs", version = "0.3.5" }
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
