[package]
name = "ragithub-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.0"
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
ragit = { path = "../..", version = "0.4.3" }
ragit-api = { path = "../../crates/api", version = "0.4.3" }
ragit-cli = { path = "../../crates/cli", version = "0.4.3" }
ragit-fs = { path = "../../crates/fs", version = "0.4.3" }
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha3 = "0.10.8"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"

[features]
log_sql = []
