[package]
name = "ragithub-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
ragit = { path = "../..", version = "0.4.4" }
ragit-api = { path = "../../crates/api", version = "0.4.4" }
ragit-cli = { path = "../../crates/cli", version = "0.4.4" }
ragit-fs = { path = "../../crates/fs", version = "0.4.4" }
rand = "0.9.2"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["multipart", "server"] }

[features]
log_sql = []
