[package]
name = "ragithub-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-std = "1.13.0"
bytes = "1.10.0"
chrono = { version = "0.4.39", features = ["serde"] }
grass = "0.13.4"
lazy_static = "1.5.0"
mdxt = "0.7.3"
ragit = { path = "../..", version = "0.4.3" }
ragit-cli = { path = "../../crates/cli", version = "0.4.3" }
ragit-fs = { path = "../../crates/fs", version = "0.4.3", features = ["log"] }
ragit-pdl = { path = "../../crates/pdl", version = "0.4.3" }
ragithub-backend = { path = "../backend", version = "0.1.0" }
reqwest = { version = "0.12.12", features = ["multipart", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"
