[package]
name = "ragithub-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-std = "1.13.2"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
grass = "0.13.4"
lazy_static = "1.5.0"
mdxt = "0.7.3"
ragit = { path = "../..", version = "0.4.4" }
ragit-cli = { path = "../../crates/cli", version = "0.4.4" }
ragit-fs = { path = "../../crates/fs", version = "0.4.4", features = ["log"] }
ragit-pdl = { path = "../../crates/pdl", version = "0.4.4" }
ragithub-backend = { path = "../backend", version = "0.1.0" }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["arbitrary_precision"] }
sha3 = "0.10.8"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
